--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@ sup {
 
 <h2>其他</h2>
 
-<p>这里有一些技术<a href="www.allen2660.com/link.html">Link</a>和个人<a href="www.allen2660.com/notes.html">Notes</a></p>
+<p>这里有一些技术<a href="link.html">Link</a>和个人<a href="notes.html">Notes</a></p>
+<p>这里是以前的<a href="http://allen2660.com" target = "_blank">博客</a></p>
 </body>
 </html>
