--- a/notes/index.html
+++ b/notes/index.html
@@ -2,27 +2,15 @@
 layout: home
 ---
 
-<div class="index-content opinion">
-    <div class="section">
-        <ul class="artical-cate">
-            <li><a href="/"><span>Blog</span></a></li>
-            <li class="on" style="text-align:center"><a href="/opinion"><span>Opinion</span></a></li>
-            <li style="text-align:right"><a href="/project"><span>Project</span></a></li>
-        </ul>
+#Notes
 
-        <div class="cate-bar"><span id="cateBar"></span></div>
+## 生命在于折腾
 
-        <ul class="artical-list">
-        {% for post in site.categories.opinion %}
-            <li>
-                <h2>
-                    <a href="{{ post.url }}">{{ post.title }}</a>
-                </h2>
-                <div class="title-desc">{{ post.description }}</div>
-            </li>
-        {% endfor %}
-        </ul>
-    </div>
-    <div class="aside">
-    </div>
-</div>
+### 码农
+
+1. [使用GitHub写博客](/new-blog/)
+### 数码爱好者
+
+## 读书
+
+## 思考
